Implement download of excel files

--- a/ui/src/app/view/header/header.component.html
+++ b/ui/src/app/view/header/header.component.html
@@ -36,3 +36,4 @@
   </ng-template>
 </p-dialog>
 <p-toast key="DownloadRequestError" position="bottom-right"></p-toast>
+<p-toast key="DownloadRequestSuccess" position="bottom-right"></p-toast>
