--- a/ui/DCSA-Theme.scss
+++ b/ui/DCSA-Theme.scss
@@ -4624,3 +4624,9 @@ body .p-datatable .p-datatable-tbody > tr:nth-child(odd) {
   background-color: lighten($steelGrey, 50%);
   color: $darkNavyBlue;
 }
+body .p-datatable .p-datatable-tbody > tr:nth-child(odd):focus{
+  background-color: #00e0e4!important;
+}
+body .p-datatable .p-datatable-tbody > tr:nth-child(even):focus{
+  background-color: #00e0e4!important;
+}
