--- a/ui/src/app/view/transport-call-creator/transport-call-creator.component.html
+++ b/ui/src/app/view/transport-call-creator/transport-call-creator.component.html
@@ -195,7 +195,7 @@
                 label="{{'general.close.label' | translate}}"
                 iconPos="left">
       </p-button>
-      <p-button label="{{'general.transportCall.create' | translate}}" iconPos="left" class="footer_option__buttons"
+      <p-button label="{{ createButtonText() |translate }}" iconPos="left" class="footer_option__buttons"
                 icon="pi pi-save" (onClick)="saveNewTransportCall()" [disabled]="transportCallFormGroup.invalid">
 
         <p-progressSpinner *ngIf="creationProgress" [style]="{width: '18px', height: '18px'}"
