--- a/ui/src/app/view/transport-call-creator/transport-call-creator.component.html
+++ b/ui/src/app/view/transport-call-creator/transport-call-creator.component.html
@@ -181,7 +181,7 @@
     <div class="p-field p-col-12 p-md-6">
       <span class="p-float-label">
         <textarea class="commentBox" id="commentbox" pInputTextarea formControlName="defaultTimestampRemark"
-                  [readOnly]="!shouldCreateTimestamp()" [disabled]="!shouldCreateTimestamp()"></textarea>
+                  [readOnly]="!shouldCreateTimestamp()"></textarea>
         <label for="commentbox">{{ 'general.comment.tooltip' | translate }}</label>
       </span>
     </div>
