--- a/ui/src/app/view/transport-call-creator/transport-call-creator.component.html
+++ b/ui/src/app/view/transport-call-creator/transport-call-creator.component.html
@@ -116,14 +116,20 @@
 
   <!-- TIMESTAMP -->
   <h4>{{ 'general.timestamp.label' | translate }}</h4>
-  <div class="p-fluid p-formgrid p-grid">
-    <div class="p-field p-col-12 p-md-4">
+  
+  <div class="p-field p-col-12 p-md-5">
+    <label for="timestampChecks"> Check to create Timestamp </label>
+    <input class="p-checkbox-box" type="checkbox" [(ngModel)]="timestampchecking" [ngModelOptions]="{standalone: true}">
+  </div>
+
+  <div class="p-fluid p-formgrid p-grid" [hidden]="!shouldCreateTimestamp()">
+    <div class="p-field p-col-12 p-md-4" [hidden]="!shouldCreateTimestamp()">
       <label for="timestampType">{{ 'general.table.header.timestamp.label' | translate }}: </label>
       <p-dropdown id="timestampType" formControlName="timestampType" styleClass="dropdown" [options]="timestampTypes">
       </p-dropdown>
     </div>
 
-    <div class="p-field p-col-12 p-md-5">
+    <div class="p-field p-col-12 p-md-5" [hidden]="!shouldCreateTimestamp()">
       <div class="p-fluid p-formgrid p-grid">
         <div class="p-field p-col-12 p-md-6">
           <p-calendar id="eventtimestamp" appendTo="body" formControlName="eventTimestampDate" hourFormat="24"
@@ -131,24 +137,22 @@
                       [showIcon]="true" [showWeek]="true"
                       [yearNavigator]="true" yearRange="2010:2030"
                       styleClass="date-time-date-field" placeholder="{{ 'general.timestamp.date.event' | translate }}"
-                      [panelStyleClass]="'datetime-panel'"
-                      [disabled]="!shouldCreateTimestamp()">
+                      [panelStyleClass]="'datetime-panel'">
           </p-calendar>
         </div>
         <div class="p-field p-col-12 p-md-6">
           <p-inputMask formControlName="eventTimestampTime" mask="99:99"
                        placeholder="{{ 'general.timestamp.time' | translate }}"
-                       [disabled]="!shouldCreateTimestamp()"
                        styleClass="datetime-time-time-field">
           </p-inputMask>
           <button type="button" pButton pRipple icon="pi pi-clock" styleClass="p-button-success"
-                  [disabled]="!shouldCreateTimestamp()" (click)="setEventTimestampToNow()">
+                  (click)="setEventTimestampToNow()">
           </button>
         </div>
       </div>
     </div>
 
-    <div class="p-field p-col-12 p-md-5">
+    <div class="p-field p-col-12 p-md-5" [hidden]="!shouldCreateTimestamp()">
       <label for="delayCode">{{"general.delaycode.label" | translate}}</label>
       <p-dropdown id="delayCode" [options]="delayCodeOptions" formControlName="delayCode" [filter]="true"
                   filterBy="label,value.name" [group]="false" [disabled]="!shouldCreateTimestamp()">
@@ -178,7 +182,7 @@
     </div>
 
 
-    <div class="p-field p-col-12 p-md-6">
+    <div class="p-field p-col-12 p-md-6" [hidden]="!shouldCreateTimestamp()" >
       <span class="p-float-label">
         <textarea class="commentBox" id="commentbox" pInputTextarea formControlName="defaultTimestampRemark"
                   [readOnly]="!shouldCreateTimestamp()"></textarea>
