--- a/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
+++ b/ui/src/app/view/timestamp-editor/timestamp-editor.component.html
@@ -78,7 +78,10 @@
         <p-inputMask [(ngModel)]="eventTimestampTime" mask="99:99"
                      placeholder="{{ 'general.timestamp.time' | translate }}"
                      styleClass="datetime-time-time-field"></p-inputMask>
-        <button type="button" pButton pRipple icon="pi pi-clock" styleClass="p-button-success"
+        <button pTooltip="{{ 'general.currentTime.tooltip' | translate }}"
+        tooltipPosition="top"
+        tooltipStyleClass="ToolTipClass"
+         class="minus-rounded-borders" type="button" pButton pRipple icon="pi pi-clock" styleClass="p-button-success"
                 (click)="setEventTimestampToNow()"></button>
       </div>
     </div>
@@ -94,7 +97,8 @@
   <div class="p-field p-col-12 p-md-7">
   </div>
 -->
-  <div class="p-field p-col-12 p-md-5">
+
+  <div class="p-field p-col-12 p-md-4">
     <label for="delayCode">{{"general.delaycode.label" | translate}}</label>
     <p-dropdown id="delayCode" [options]="delayCodeOptions" [(ngModel)]="delayCode" [filter]="true"
                 filterBy="label,value.name" [group]="false">
@@ -120,11 +124,10 @@
       </ng-template>
     </p-dropdown>
   </div>
-  <div class="p-field p-col-12 p-md-7">
-  </div>
+  
+  <div class="p-field p-col-12 p-md-2"></div>
 
-
-  <div class="p-field p-col-12 p-md-6">
+  <div class="p-field p-col-12 p-md-5">
     <span class="p-float-label">
     <textarea class="commentBox" id="commentbox" pInputTextarea [(ngModel)]="defaultTimestamp.remark"
     ></textarea>
