--- a/ui/src/app/view/transport-call-creator/transport-call-creator.component.html
+++ b/ui/src/app/view/transport-call-creator/transport-call-creator.component.html
@@ -130,24 +130,26 @@
     </div>
 
     <div class="p-field p-col-12 p-md-5" [hidden]="!shouldCreateTimestamp()">
+      <label for="eventtimestamp">{{ 'general.table.header.eventTimestamp.label' | translate }}: </label>
+  
       <div class="p-fluid p-formgrid p-grid">
         <div class="p-field p-col-12 p-md-6">
-          <p-calendar id="eventtimestamp" appendTo="body" formControlName="eventTimestampDate" hourFormat="24"
+          <p-calendar id="eventtimestamp" appendTo="body" [(ngModel)]="eventTimestampDate" hourFormat="24"
                       [monthNavigator]="true" [showButtonBar]="false"
                       [showIcon]="true" [showWeek]="true"
                       [yearNavigator]="true" yearRange="2010:2030"
                       styleClass="date-time-date-field" placeholder="{{ 'general.timestamp.date.event' | translate }}"
-                      [panelStyleClass]="'datetime-panel'">
-          </p-calendar>
+                      [panelStyleClass]="'datetime-panel'"></p-calendar>
         </div>
         <div class="p-field p-col-12 p-md-6">
-          <p-inputMask formControlName="eventTimestampTime" mask="99:99"
+          <p-inputMask [(ngModel)]="eventTimestampTime" mask="99:99"
                        placeholder="{{ 'general.timestamp.time' | translate }}"
-                       styleClass="datetime-time-time-field">
-          </p-inputMask>
-          <button type="button" pButton pRipple icon="pi pi-clock" styleClass="p-button-success"
-                  (click)="setEventTimestampToNow()">
-          </button>
+                       styleClass="datetime-time-time-field"></p-inputMask>
+          <button pTooltip="{{ 'general.currentTime.tooltip' | translate }}"
+          tooltipPosition="top"
+          tooltipStyleClass="ToolTipClass"
+           class="minus-rounded-borders" type="button" pButton pRipple icon="pi pi-clock" styleClass="p-button-success"
+                  (click)="setEventTimestampToNow()"></button>
         </div>
       </div>
     </div>
