--- a/ui/src/app/view/transport-call-creator/transport-call-creator.component.html
+++ b/ui/src/app/view/transport-call-creator/transport-call-creator.component.html
@@ -121,7 +121,7 @@
   <h4>{{ 'general.timestamp.label' | translate }}</h4>
 
   <div class="p-field p-col-12 p-md-5">
-    <label> Check to create Timestamp </label>
+    <label for="timestampType"> Check to create Timestamp </label>
     <input class="p-checkbox-box" type="checkbox" [(ngModel)]="timestampchecking" [ngModelOptions]="{standalone: true}">
   </div>
 
