--- a/ui/src/app/view/transport-call-creator/transport-call-creator.component.html
+++ b/ui/src/app/view/transport-call-creator/transport-call-creator.component.html
@@ -140,25 +140,28 @@
       <label for="eventtimestamp">{{ 'general.table.header.eventTimestamp.label' | translate }}: </label>
       <div class="p-fluid p-formgrid p-grid">
         <div class="p-field p-col-12 p-md-6">
-          <p-calendar id="eventtimestamp" appendTo="body" [(ngModel)]="eventTimestampDate" hourFormat="24"
+          <p-calendar id="eventtimestamp" appendTo="body" formControlName="eventTimestampDate" hourFormat="24"
                       [monthNavigator]="true" [showButtonBar]="false"
                       [showIcon]="true" [showWeek]="true"
                       [yearNavigator]="true" yearRange="2010:2030"
                       styleClass="date-time-date-field" placeholder="{{ 'general.timestamp.date.event' | translate }}"
                       [panelStyleClass]="'datetime-panel'">
           </p-calendar>
-          <span *ngIf="transportCallFormGroup.get('eventTimestampDate').hasError('required') || transportCallFormGroup.get('eventTimestampTime').hasError('required')" class="p-invalid">
+          <span
+            *ngIf="transportCallFormGroup.get('eventTimestampDate').hasError('required') || transportCallFormGroup.get('eventTimestampTime').hasError('required')"
+            class="p-invalid">
             {{ 'general.timestamp.validation.eventTimestamp.required' | translate }}
           </span>
         </div>
         <div class="p-field p-col-12 p-md-6">
-          <p-inputMask [(ngModel)]="eventTimestampTime" mask="99:99"
+          <p-inputMask formControlName="eventTimestampTime" mask="99:99"
                        placeholder="{{ 'general.timestamp.time' | translate }}"
                        styleClass="datetime-time-time-field"></p-inputMask>
           <button pTooltip="{{ 'general.currentTime.tooltip' | translate }}"
-          tooltipPosition="top"
-          tooltipStyleClass="ToolTipClass"
-           class="minus-rounded-borders" type="button" pButton pRipple icon="pi pi-clock" styleClass="p-button-success"
+                  tooltipPosition="top"
+                  tooltipStyleClass="ToolTipClass"
+                  class="minus-rounded-borders" type="button" pButton pRipple icon="pi pi-clock"
+                  styleClass="p-button-success"
                   (click)="setEventTimestampToNow()"></button>
         </div>
       </div>
@@ -194,7 +197,7 @@
     </div>
 
 
-    <div class="p-field p-col-12 p-md-6" [hidden]="!shouldCreateTimestamp()" >
+    <div class="p-field p-col-12 p-md-6" [hidden]="!shouldCreateTimestamp()">
       <span class="p-float-label">
         <textarea class="commentBox" id="commentbox" pInputTextarea formControlName="defaultTimestampRemark"
                   [readOnly]="!shouldCreateTimestamp()"></textarea>
