--- a/ui/src/app/view/transport-call-creator/transport-call-creator.component.scss
+++ b/ui/src/app/view/transport-call-creator/transport-call-creator.component.scss
@@ -62,3 +62,8 @@ input[type="checkbox"] {
     border-bottom-left-radius: 0;
     border-top-left-radius: 0;
   }
+
+  textarea{
+    height: 200px;
+    width: 560px;
+  }
